test/classes/generic/varOverBadGeneric.good
varOverBadGeneric.chpl:6: error: variable 'myC' is not initialized
note: non-nilable class type borrowed C does not support default initialization
note: Consider using the type borrowed C? instead
varOverBadGeneric.chpl:6: error: split initialization is not supported for globals
